# maketables

./: .gitignore  .pre-commit-config.yaml  DTable.ipynb  DocxTables.ipynb  ETable.ipynb  FORMAT_SPECIFIER_EXAMPLES.md  InteractiveExample.ipynb  LICENSE  LatexTables.ipynb  MANIFEST.in  PaperTest.docx  README.html  README.md  WritingPapers.ipynb  _config.yml  _quarto.yml  debug.py  dtable.py  dtable_formatting_demo.py  dtable_formatting_proposal.py  getting-started.ipynb  index.html  index.qmd  introductions.html  introductions.ipynb  objects.json  pptx_first_version  pyproject.toml  pyregtable copy.py  pystataIntegration.ipynb  quartoExample.ipynb  quickstart.ipynb  requirements-dev.txt  requirements.txt  setup.py  styles.css  tab_sample.docx  tab_sample.html  tab_sample_1.docx  tab_sample_1.html  (+16 more)
.github/workflows/: deploy-docs.yml
README_files/libs/bootstrap/: _quarto.yml
_freeze/index/execute-results/: html.json
data/: salaries.csv
docs/: AddingMethods.ipynb  DTable.ipynb  DocxTables.ipynb  ETable.ipynb  LatexOutput.tex  LatexTables.ipynb  Linearmodels.ipynb  PaperTest.docx  PaperTest1.docx  SampleTableDoc2.tex  SampleTableDoc3.tex  SupportedModelClasses.md  UsingLabels.ipynb  WordOutput.docx  first_col_width_docx.md  getting-started.ipynb  pdflatex26348.fls  pystataIntegration.ipynb  quartoExample.ipynb  quartoExample.tex  references.bib  regression_table.docx  tab1.html  tab2.html  tab3.html  tab_sample.pptx  tab_sample_1.docx  testQuarto.fdb_latexmk  testQuarto.ipynb  test_reg1.docx  test_reg3.docx  test_tab1.docx  test_tab2.docx  test_tab2.tex  ~$perTest1.docx  ~$rdOutput.docx
latex_output/: all_tables.tex  custom_styled_table.tex  table1_descriptives.tex  table2_regressions.tex  table3_promotions.tex
maketables/: __init__.py  btable.py  dtable.py  etable.py  extractors.py  importdta.py  mtable.py  pystata_extractor.py  symbols.py
output/: LatexOutput.tex  PaperTest1.docx  WordOutput.docx  tab1.html
reference/: BTable.qmd  DTable.qmd  ETable.qmd  MTable.qmd  importdta.export_dta.qmd  importdta.get_var_labels.qmd  importdta.import_dta.qmd  importdta.set_var_labels.qmd  index.qmd
tabout/: __init__.py  btable.py  dtable.py  etable.py  extractors.py  importdta.py  importstata.py  mtable.py  rtable.py  tabout.py
