[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maketables"
version = "0.1.0"
authors = [
    {name = "Dirk Sliwka", email = "dirks_email@uni.de"},
]
description = "A Python package for creating publication-ready tables from statistical models and descriptive statistics"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "great-tables>=0.2.0",
    "tabulate>=0.9.0",
    "python-docx>=0.8.11",
    "ipython>=7.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "pyfixest>=0.13.0",
    "statsmodels>=0.13.0",
    "ipykernel>=6.0.0,<7",
    "nbconvert>=7.0.0",
    "pylatex>=1.4.2,<2",
]

[tool.pixi.feature.dev.dependencies]
quarto = ">=1.8.25,<2"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
maketables = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.feature.docs.tasks]
run-all-notebooks = "jupyter nbconvert --execute --to notebook --inplace DTable.ipynb ETable.ipynb DocxTables.ipynb LatexTables.ipynb WritingPapers.ipynb getting-started.ipynb"
docs-preview = "quarto preview"
docs-install-tex = "quarto install tinytex"